fix: ByteBuddy 대신 CGLIB 선회